--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ td, th {
   background: #f3f3f3; }
 
 .black-bg {
-  background: #333; }
+  background: #ffeb0d; }
 
 .go-top {
   display: block;
