Social footer color update

--- a/css/style.css
+++ b/css/style.css
@@ -2049,7 +2049,7 @@ td, th {
   .footer-section .social_links li {
     display: inline-block; }
     .footer-section .social_links li a {
-      color: #fff;
+      color: #861db5;
       font-size: 30px;
       margin-right: 10px; }
       .footer-section .social_links li a:hover {
