--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,10 @@ td, th {
   background: #f3f3f3; }
 
 .black-bg {
-  background: #ffeb0d; }
+  background: #333; }
+  
+.footer-bg {
+  background: #861db5; }
 
 .go-top {
   display: block;
