Footer BG Fix final

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ td, th {
   background: #333; }
   
 .footer-bg {
-  background: #861db5; }
+  background: #ffeb0d; }
 
 .go-top {
   display: block;
