--- a/css/style.css
+++ b/css/style.css
@@ -1193,6 +1193,19 @@ td, th {
     font-weight: 300;
     text-align: center;
     margin-top: 20px; }
+  .section-title h2 {
+    background: #ffeb0d;
+    color: #000;
+    padding: 10px;
+    max-width: 320px;
+    text-transform: capitalize;
+    text-align: center;
+    margin: 0 auto;
+    border: 5px double #000	; }
+  .section-title h3 {
+    font-weight: 300;
+    text-align: center;
+    margin-top: 20px; }
 
 .black-section-title h1 {
   background: #ffeb0d;
@@ -1556,7 +1569,7 @@ td, th {
   margin-bottom: 20px; }
   .single-portfolio:after {
     content: "";
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.3);
     position: absolute;
     top: 0;
     left: -30%;
@@ -1997,7 +2010,10 @@ td, th {
 /*  Contact Styles 
 /* =================================== */
 #contact_form {
-  margin-top: 40px; }
+  margin-top: -60px; 
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;}
 
 .contact-section input[type="text"],
 .contact-section input[type="email"],
@@ -2074,6 +2090,12 @@ td, th {
 	 font-size: 40px;	
  }
 .header-area {
-	 background-color: #ffeb0d;
+	 background-color: transparent;
+}
+.menu-image{
+	margin-top: 125px;
+}
+.section-title.contact-lead {
+	margin-bottom:30px !important;
 }
  
