--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,16 @@
 /* =================================== */
 /*  Responsive Styles 
 /* =================================== */
+@media (min-width: 768px) {
+  .menu-mobile {
+	display:none;
+	}
+}
+@media (max-width: 767px) {
+  .menu-desktop {
+	display:none;
+	}
+}
 @media (max-width: 991px) {
   .cta-section .primary-btn {
     margin-top: 20px;
@@ -63,7 +73,7 @@
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-}
+	}
 }
 
 @media (max-width: 576px) {
